# AviationThesis

./: README.md  README.txt
Project_Code/Python3Model/src/: cognitiveModel.py  gui.py  modelParameters.py  runThis.py  sandbox.py  scaleFactor.py  testPlatform.py
Project_Code/XPlane_Plugins/SimData/: SimData.cpp  logsUploader_accessKeys.csv
Project_Code/XPlane_Plugins/SimData/SDK/CHeaders/XPLM/: XPLMDataAccess.h  XPLMDefs.h  XPLMProcessing.h
Project_Code/XPlane_Plugins/SimData/SimData.xcodeproj/: project.pbxproj
Project_Code/XPlane_Plugins/SimData/SimData.xcodeproj/project.xcworkspace/xcuserdata/flyingtopher.xcuserdatad/: UserInterfaceState.xcuserstate
Project_Code/XPlane_Plugins/SimData/SimData.xcodeproj/xcuserdata/flyingtopher.xcuserdatad/xcschemes/: xcschememanagement.plist
Project_Data_Analysis/: Data_Analysis_Pipeline.ipynb  main_thesis_data_analysis_.py
Project_Data_Analysis/Empirical_Data_Analysis/: empirical_analysis.ipynb
Project_Data_Analysis/Model_Data_Analysis/: Data_Analysis_Pipeline.ipynb
Project_Notes/: 2025-11-10.md  2025-3-7.md
